[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/bullet/bullet_boss/bullet_boss1.png" type="Texture" id=1]
[ext_resource path="res://Bullet_Boss_1/Bullet_Boss_1.gd" type="Script" id=2]
[ext_resource path="res://sprites/bullet/bullet_boss/bullet_boss2.png" type="Texture" id=3]
[ext_resource path="res://sprites/bullet/bullet_boss/bullet_boss3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "estrelas",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.7

[node name="Bullet_Boss_1" type="Area2D"]
scale = Vector2( 0.34985, 0.324338 )
collision_layer = 0
collision_mask = 65
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.666041, 0.714199 )
frames = SubResource( 3 )
animation = "estrelas"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.979975, 0.967673 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_Boss_1_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_Boss_1_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
